--- a/projects/shell/src/index.html
+++ b/projects/shell/src/index.html
@@ -1,60 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Shell</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <title>Shell</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-  <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
 
-  <style>
+    <style>
       body {
-          font-family: 'Comfortaa', cursive;
-          padding-top: 80px;
-          padding-left: 10px;
+        font-family: "Open Sans", sans-serif;
       }
-  
-      ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          overflow: hidden;
-          background-color: #333;
-  
-          position: fixed;
-          top: 0;
-          left: 0;
-          width: 100%;
-      }
-  
-      li {
-          float: left;
-          height: 50px;
-          margin-top: auto;
-          margin-bottom: auto;
-      }
-  
-      li a {
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          cursor: pointer;
-      }
-  
-      li a:hover {
-          background-color: #111;
-      }
-  </style>
-
-</head>
-<body>
-  <app-root></app-root>
-  <!-- Shell -->
-  <!-- <script src="http://localhost:3000/remoteEntry.js"></script> -->
-  <!-- doItWebpack({mfe1: 'http://localhost:3000/remoteEntry.js'}) -->
-</body>
+    </style>
+  </head>
+  <body>
+    <app-root></app-root>
+    <!-- Shell -->
+    <!-- <script src="http://localhost:3000/remoteEntry.js"></script> -->
+    <!-- doItWebpack({mfe1: 'http://localhost:3000/remoteEntry.js'}) -->
+  </body>
 </html>
